[package]
name = "bulls-and-cows"
version = "1.0.13"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/bulls-and-cows"
homepage = "https://magiclen.org/bulls-and-cows"
keywords = ["bulls-and-cows", "1a2b", "number", "4-digits", "guess"]
categories = ["game-engines"]
description = "A framework for building bulls-and-cows games (1A2B) for any data type."
readme = "README.md"
license = "MIT"

[badges.travis-ci]
repository = "magiclen/bulls-and-cows"
branch = "master"

[dependencies]
rand = "0.7"
random-pick = "1.2.3"
regex = "1.1.2"
permutohedron = "0.2.4"
debug-helper = "0.3"


[dev-dependencies]
lazy_static = "1.3.0"