[package]
name = "bulls-and-cows"
version = "1.0.22"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.65"
repository = "https://github.com/magiclen/bulls-and-cows"
homepage = "https://magiclen.org/bulls-and-cows"
keywords = ["bulls-and-cows", "game-1a2b", "number", "game-four-digits", "guess"]
categories = ["game-engines"]
description = "A framework for building bulls-and-cows games (1A2B) for any data type."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
rand = "0.8"
random-pick = "1.2.14"
regex = "1.1.2"
permutohedron = "0.2.4"
debug-helper = "0.3"

[dev-dependencies]
once_cell = "1"
